fix for overflow issue

--- a/NewSite/style.css
+++ b/NewSite/style.css
@@ -1,3 +1,8 @@
+html{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     padding: 0;
     margin: 0;
